--- a/Application/Code/DBMS_G15/DBMS_G15/DBMS_G15.csproj
+++ b/Application/Code/DBMS_G15/DBMS_G15/DBMS_G15.csproj
@@ -58,6 +58,12 @@
     <Compile Include="CustomerForm.Designer.cs">
       <DependentUpon>CustomerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="CustomerSignUpForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CustomerSignUpForm.Designer.cs">
+      <DependentUpon>CustomerSignUpForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DriverForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +94,12 @@
     <Compile Include="PartnerForm.Designer.cs">
       <DependentUpon>PartnerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="partnerSignUpForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="partnerSignUpForm.Designer.cs">
+      <DependentUpon>partnerSignUpForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProductForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,11 +108,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SignUpForm.cs">
+    <Compile Include="DriverSignUpForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SignUpForm.Designer.cs">
-      <DependentUpon>SignUpForm.cs</DependentUpon>
+    <Compile Include="DriverSignUpForm.Designer.cs">
+      <DependentUpon>DriverSignUpForm.cs</DependentUpon>
     </Compile>
     <Compile Include="StaffForm.cs">
       <SubType>Form</SubType>
@@ -113,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CustomerForm.resx">
       <DependentUpon>CustomerForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CustomerSignUpForm.resx">
+      <DependentUpon>CustomerSignUpForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DriverForm.resx">
       <DependentUpon>DriverForm.cs</DependentUpon>
@@ -129,6 +144,9 @@
     <EmbeddedResource Include="PartnerForm.resx">
       <DependentUpon>PartnerForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="partnerSignUpForm.resx">
+      <DependentUpon>partnerSignUpForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ProductForm.resx">
       <DependentUpon>ProductForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -141,8 +159,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SignUpForm.resx">
-      <DependentUpon>SignUpForm.cs</DependentUpon>
+    <EmbeddedResource Include="DriverSignUpForm.resx">
+      <DependentUpon>DriverSignUpForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="StaffForm.resx">
       <DependentUpon>StaffForm.cs</DependentUpon>
