--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Application/Code/DBMS_G15/DBMS_G15/obj/*
 Application/Code/DBMS_G15/DBMS_G15/bin/*
 Application/Code/DBMS_G15/.vs/*
 *.cache
+*.docx
+*.pdf
