--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 Application/Code/DBMS_G15/DBMS_G15/obj/*
 Application/Code/DBMS_G15/DBMS_G15/bin/*
 Application/Code/DBMS_G15/.vs/*
+Application/Code/DemoLoi/DemoLoi/obj/*
+Application/Code/DemoLoi/DemoLoi/bin/*
+Application/Code/DemoLoi/.vs/*
 *.cache
 *.docx
 *.pdf
