--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Application/Code/DemoLoi/.vs/*
 *.pdf
 Application/Code/DemoLoi/DemoLoi/DemoLoi/obj/*
 Application/Code/DemoLoi/DemoLoi/DemoLoi/bin/*
+Application/Code/DemoLoi/DemoLoi/.vs/*
