--- a/Application/Code/DBMS_G15/DBMS_G15/DBMS_G15.csproj
+++ b/Application/Code/DBMS_G15/DBMS_G15/DBMS_G15.csproj
@@ -215,5 +215,11 @@
   <ItemGroup>
     <None Include="Resources\delete-32.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\lock.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\unlock.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
