--- a/Application/Code/DBMS_G15/DBMS_G15/DBMS_G15.csproj
+++ b/Application/Code/DBMS_G15/DBMS_G15/DBMS_G15.csproj
@@ -58,12 +58,6 @@
     <Compile Include="CustomerForm.Designer.cs">
       <DependentUpon>CustomerForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="CustomerProfile.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="CustomerProfile.Designer.cs">
-      <DependentUpon>CustomerProfile.cs</DependentUpon>
-    </Compile>
     <Compile Include="CustomerSignUpForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,20 +126,17 @@
     <Compile Include="StaffForm.Designer.cs">
       <DependentUpon>StaffForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="StaffProfile.cs">
+    <Compile Include="StaffAndCustomerProfile.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="StaffProfile.Designer.cs">
-      <DependentUpon>StaffProfile.cs</DependentUpon>
+    <Compile Include="StaffAndCustomerProfile.Designer.cs">
+      <DependentUpon>StaffAndCustomerProfile.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="ContractForm.resx">
       <DependentUpon>ContractForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CustomerForm.resx">
       <DependentUpon>CustomerForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="CustomerProfile.resx">
-      <DependentUpon>CustomerProfile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CustomerSignUpForm.resx">
       <DependentUpon>CustomerSignUpForm.cs</DependentUpon>
@@ -190,8 +181,8 @@
     <EmbeddedResource Include="StaffForm.resx">
       <DependentUpon>StaffForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="StaffProfile.resx">
-      <DependentUpon>StaffProfile.cs</DependentUpon>
+    <EmbeddedResource Include="StaffAndCustomerProfile.resx">
+      <DependentUpon>StaffAndCustomerProfile.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
